fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,35 @@
+body {
+  margin: 0;
+}
+
 #page-container {
+  display: grid;
   border: solid;
   min-height: 600px;
   height: 70vh;
   width: 100vw;
+  grid-template-rows: 1fr 6fr;
+  grid-template-columns: 1fr 1fr 1fr;
+
 }
 
-.squares {
+#title {
+  display: grid;
+  grid-row: 1/2;
+  grid-column: 2/3;
+}
+
+#squares {
   display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: space-around;
   border: solid;
   height: 60vh;
   width: 80vw;
+  align-items: center;
+  align-content: center;
+  justify-content: space-around;
+  grid-row: 2;
+  grid-column: 2/3;
+
 }
 
 .box {
